# ya-disk-sync

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/yds-cli/: Cargo.toml
crates/yds-cli/src/: main.rs
crates/yds-core/: Cargo.toml
crates/yds-core/src/: config.rs  exclusions.rs  lib.rs  path_mapping.rs
crates/yds-linux/: Cargo.toml
crates/yds-linux/src/: lib.rs
crates/yds-scanner/: Cargo.toml
crates/yds-scanner/src/: lib.rs
crates/yds-service/: Cargo.toml
crates/yds-service/src/: lib.rs  logging.rs
crates/yds-state/: Cargo.toml
crates/yds-state/src/: lib.rs  models.rs
crates/yds-sync/: Cargo.toml
crates/yds-sync/src/: lib.rs  migration.rs
crates/yds-web/: Cargo.toml
crates/yds-web/src/: lib.rs
crates/yds-windows/: Cargo.toml
crates/yds-windows/src/: lib.rs
crates/yds-yandex-disk/: Cargo.toml
crates/yds-yandex-disk/src/: auth.rs  error.rs  lib.rs  models.rs
docs/: acceptance.md  configuration.md  development.md  linux-systemd.md  migration.md  release.md  runtime.md  sync-model.md  testing.md  troubleshooting.md  web-ui.md  windows-service.md  yandex-disk-client.md
packaging/windows/: ya-disk-sync.iss
scripts/: install-windows-service.ps1  installer-smoke.ps1  release-smoke.ps1  windows-service-smoke.ps1
