[package]
name = "yds-cli"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
native-tray = ["yds-windows/native-tray"]

[[bin]]
name = "ya-disk-sync"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
secrecy.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
yds-core = { path = "../yds-core" }
yds-linux = { path = "../yds-linux" }
yds-scanner = { path = "../yds-scanner" }
yds-service = { path = "../yds-service" }
yds-state = { path = "../yds-state" }
yds-sync = { path = "../yds-sync" }
yds-web = { path = "../yds-web" }
yds-windows = { path = "../yds-windows" }
yds-yandex-disk = { path = "../yds-yandex-disk" }
