[package]
name = "yds-service"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
yds-core = { path = "../yds-core" }
yds-state = { path = "../yds-state" }
yds-sync = { path = "../yds-sync" }
yds-web = { path = "../yds-web" }
yds-yandex-disk = { path = "../yds-yandex-disk" }

[dev-dependencies]
filetime.workspace = true
tempfile.workspace = true
tower.workspace = true
