[package]
name = "yds-yandex-disk"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
keyring.workspace = true
keyring-core.workspace = true
oauth2.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
yds-core = { path = "../yds-core" }

[dev-dependencies]
tempfile.workspace = true
